--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -145,8 +145,10 @@
                         </ng-container>
                     </div>
                 </div>
-                <div>
-                    <h2 class="text-center">Total : ${{total}}</h2>
+                <div class="d-flex justify-content-center">
+                    <div class="bg_verde p-2">
+                        <h2 class="titulo_carta text-center">Total: ${{total}}</h2>
+                    </div>
                 </div>
                 <div class="mt-5 mb-4 fondo_card p-5">
                     <div class="text-center">
