--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,11 @@
 <nav class="navbar-expand-lg fixed-top">
-  <div class="container-fluid p-0 m-2 mt-4">
+  <div class="container-fluid p-0 margin_nav">
     <div class="row">
       <div class="col-5 d-flex align-items-center">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="icon-menu"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item cursor_pointer mx-1">
@@ -28,7 +32,7 @@
         </div>
       </div>
       <div class="col-2">
-        <div class="text-center">
+        <div class="text-center img_nav">
           <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="100%" height="100%">
         </div>
       </div>
