avances casi finales

--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -1,46 +1,60 @@
 <div class="">
     <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide fondo_swiper">
-                <img src="../../../assets/img/Manza-home.jpg" alt="">
-                <div class="overlay_box">
-                    <div class="texto_superpuesto">
-                        <p class="texto_small_swiper">Conoce los beneficios de las</p>
-                        <p class="texto_big_swiper">manzanas</p>
-                        <p class="texto_big_swiper">orgánicas</p>
-                    </div>
-                </div>
+      <div class="swiper-wrapper">
+        <div class="swiper-slide fondo_swiper">
+            <img src="../../../assets/img/actividades-1.jpg" alt="">
+            <div class="overlay_box">
+              <div class="texto_superpuesto">
+                <p class="texto_small_swiper">No esperes mas</p>
+                <p class="texto_big_swiper">Visitanos</p>
+              </div>
             </div>
-            <div class="swiper-slide">
-                <div class="fondo_swiper">
-                    <img src="../../../assets/img/Manza-home.jpg" alt="">
-                </div>
+          </div>
+        <div class="swiper-slide fondo_swiper">
+          <img src="../../../assets/img/beneficios-manzana.jpg" alt="">
+          <div class="overlay_box">
+            <div class="texto_superpuesto">
+              <p class="texto_small_swiper">Conoce los beneficios de las</p>
+              <p class="texto_big_swiper">manzanas</p>
+              <p class="texto_big_swiper">orgánicas</p>
             </div>
-            <div class="swiper-slide fondo_swiper">
-                <img src="../../../assets/img/Manza-home.jpg" alt="">
-                <div class="overlay_box">
-                    <div class="texto_superpuesto">
-                        <p class="texto_small_swiper">Conoce nuestras</p>
-                        <p class="texto_big_swiper">actividades</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide fondo_swiper">
-                <img src="../../../assets/img/Manza-home.jpg" alt="">
-                <div class="overlay_box">
-                    <div class="texto_superpuesto">
-                        <p class="texto_small_swiper">Conoce los beneficios de las</p>
-                        <p class="texto_big_swiper">manzanas</p>
-                        <p class="texto_big_swiper">orgánicas</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-slide fondo_swiper">
+          <img src="../../../assets/img/Manza-home.jpg" alt="">
+          <div class="overlay_box">
+            <div class="texto_superpuesto">
+              <p class="texto_small_swiper">El mayor productor de</p>
+              <p class="texto_big_swiper">manzanas</p>
+              <p class="texto_big_swiper">orgánicas</p>
+              <p class="texto_small_swiper">Teziutlán</p>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide fondo_swiper">
+          <img src="../../../assets/img/actividades-2.jpg" alt="">
+          <div class="overlay_box">
+            <div class="texto_superpuesto">
+              <p class="texto_small_swiper">Conoce las</p>
+              <p class="texto_big_swiper">Actividades</p>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide fondo_swiper">
+          <img src="../../../assets/img/Nosotros.jpg" alt="">
+          <div class="overlay_box">
+            <div class="texto_superpuesto">
+              <p class="texto_small_swiper">Conoce acerca de</p>
+              <p class="texto_big_swiper">Nosotros</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
-</div>
+  </div>
 <div class="container text-center mt-3 mb-4">
     <span class="texto_subtitle">Manzana Serrana</span><br>
     <p class="texto_title bold espacios_textos">Pedidos</p>
@@ -240,9 +254,20 @@
                         <div class="mx-2 mb-1">
                             <div class="row">
                                 <div class="col">
-                                    <p class="card-text">Nivel de Madurez {{aux.nivelMadurez}}</p>
-                                    <p class="card-text">${{aux.precioKilo}} por kg</p>
-                                    <p class="card-text">${{aux.precioCaja}} por Caja</p>
+                                    <ul class="p-0">
+                                        <li class="card-text d-flex justify-content-between">
+                                            Nivel de madurez
+                                            <span class="">{{ aux.nivelMadurez }}</span>
+                                        </li>
+                                        <li class="card-text d-flex justify-content-between align-items-center">
+                                            Precio x kilo
+                                            <span class="">$ {{ aux.precioKilo }}</span>
+                                        </li>
+                                        <li class="card-text d-flex justify-content-between align-items-center">
+                                            Precio x caja
+                                            <span class="">$ {{ aux.precioCaja }}</span>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
