--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -42,9 +42,13 @@
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-insta"><span class="path1"></span><span
                 class="path2"></span><span class="path3"></span></span></a>
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-twitter-x"></span></a>
-          <ng-container *ngIf="isLoggedIn">
+          <ng-container *ngIf="isLoggedIn; else iconDos">
             <a (click)="logout()" class="icon"><i class="fa fa-sign-out"></i></a>
           </ng-container>
+          <ng-template #iconDos>
+            <a [routerLink]="['/login']" class="icon"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
+          </ng-template>
+          
         </div>
       </div>
     </div>
