--- a/src/app/pages/actividades/actividades.component.html
+++ b/src/app/pages/actividades/actividades.component.html
@@ -2,7 +2,25 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide fondo_swiper">
-        <img src="../../../assets/img/Manza-home.jpg" alt="">
+        <img src="../../../assets/img/actividades-2.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce las</p>
+            <p class="texto_big_swiper">Actividades</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+          <img src="../../../assets/img/actividades-1.jpg" alt="">
+          <div class="overlay_box">
+            <div class="texto_superpuesto">
+              <p class="texto_small_swiper">No esperes mas</p>
+              <p class="texto_big_swiper">Visitanos</p>
+            </div>
+          </div>
+        </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/beneficios-manzana.jpg" alt="">
         <div class="overlay_box">
           <div class="texto_superpuesto">
             <p class="texto_small_swiper">Conoce los beneficios de las</p>
@@ -11,27 +29,23 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide">
-        <div class="fondo_swiper">
-          <img src="../../../assets/img/Manza-home.jpg" alt="">
-        </div>
-      </div>
       <div class="swiper-slide fondo_swiper">
         <img src="../../../assets/img/Manza-home.jpg" alt="">
         <div class="overlay_box">
           <div class="texto_superpuesto">
-            <p class="texto_small_swiper">Conoce nuestras</p>
-            <p class="texto_big_swiper">actividades</p>
+            <p class="texto_small_swiper">El mayor productor de</p>
+            <p class="texto_big_swiper">manzanas</p>
+            <p class="texto_big_swiper">orgánicas</p>
+            <p class="texto_small_swiper">Teziutlán</p>
           </div>
         </div>
       </div>
       <div class="swiper-slide fondo_swiper">
-        <img src="../../../assets/img/Manza-home.jpg" alt="">
+        <img src="../../../assets/img/Nosotros.jpg" alt="">
         <div class="overlay_box">
           <div class="texto_superpuesto">
-            <p class="texto_small_swiper">Conoce los beneficios de las</p>
-            <p class="texto_big_swiper">manzanas</p>
-            <p class="texto_big_swiper">orgánicas</p>
+            <p class="texto_small_swiper">Conoce acerca de</p>
+            <p class="texto_big_swiper">Nosotros</p>
           </div>
         </div>
       </div>
@@ -69,42 +83,46 @@
 </div>
 <div class="container mt-3 mb-3">
   <div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+    <ng-container *ngFor="let aux of listaEventos; let i = index">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            [attr.data-bs-target]="'#collapse_' + i" [attr.aria-controls]="'collapse_' + i" aria-expanded="false">
+            <div class="texto_subtitle">
+              {{ aux.nombre }}
+            </div>
+          </button>
+        </h2>
+        <div [id]="'collapse_' + i" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <div class="">
+              <div class="row g-0 mb-3">
+                <div class="col-12">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(aux.foto)"
+                        class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8 carta_blanca">
+                      <div class="card-body">
+                        <p class="titulo_carta_blanca text-center">{{aux.fechaInicio}} &nbsp; {{aux.fechaFin}}</p>
+                        <p class="texto_carta_blanca">{{aux.descripcion}}</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4463.930848099749!2d-97.36533660863826!3d19.810167045312674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85daeb6635575fb7%3A0xe2960c41f5d8029c!2sAZTEC%20GYM!5e0!3m2!1ses!2smx!4v1701926393383!5m2!1ses!2smx"
+                  width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div> -->
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
+    </ng-container>
   </div>
 </div>
 <!-- Message system -->
