--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,157 +1,252 @@
 <div class="">
   <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-          <div class="swiper-slide fondo_swiper">
-              <img src="../../../assets/img/Manza-home.jpg" alt="">
-              <div class="overlay_box">
-                  <div class="texto_superpuesto">
-                      <p class="texto_small_swiper">Conoce los beneficios de las</p>
-                      <p class="texto_big_swiper">manzanas</p>
-                      <p class="texto_big_swiper">orgánicas</p>
-                  </div>
-              </div>
+    <div class="swiper-wrapper">
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/Manza-home.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">El mayor productor de</p>
+            <p class="texto_big_swiper">manzanas</p>
+            <p class="texto_big_swiper">orgánicas</p>
+            <p class="texto_small_swiper">Teziutlán</p>
           </div>
-          <div class="swiper-slide">
-              <div class="fondo_swiper">
-                  <img src="../../../assets/img/Manza-home.jpg" alt="">
-              </div>
-          </div>
-          <div class="swiper-slide fondo_swiper">
-              <img src="../../../assets/img/Manza-home.jpg" alt="">
-              <div class="overlay_box">
-                  <div class="texto_superpuesto">
-                      <p class="texto_small_swiper">Conoce nuestras</p>
-                      <p class="texto_big_swiper">actividades</p>
-                  </div>
-              </div>
-          </div>
-          <div class="swiper-slide fondo_swiper">
-              <img src="../../../assets/img/Manza-home.jpg" alt="">
-              <div class="overlay_box">
-                  <div class="texto_superpuesto">
-                      <p class="texto_small_swiper">Conoce los beneficios de las</p>
-                      <p class="texto_big_swiper">manzanas</p>
-                      <p class="texto_big_swiper">orgánicas</p>
-                  </div>
-              </div>
-          </div>
+        </div>
       </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/beneficios-manzana.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce los beneficios de las</p>
+            <p class="texto_big_swiper">manzanas</p>
+            <p class="texto_big_swiper">orgánicas</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/actividades-2.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce las</p>
+            <p class="texto_big_swiper">Actividades</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/actividades-1.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">No esperes mas</p>
+            <p class="texto_big_swiper">Visitanos</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/Nosotros.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce acerca de</p>
+            <p class="texto_big_swiper">Nosotros</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
   </div>
 </div>
 <div class="container text-center mt-5 mb-5">
   <span class="texto_subtitle">Manzana Serrana</span>
   <br>
-  <p class="texto_title bold">Beneficios</p>
+  <p class="texto_title bold">Teziutlán</p>
 </div>
 <div class="container mt-3 mb-3">
   <div class="row">
     <div class="col">
       <div class="">
-        <img src="../../../assets/img/login-card-1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">La historia de Rancho Escondido se remonta a fines del siglo XVIII y ha permanecido en manos de la familia original por más de 130 años. Desde junio de 2020 ha tenido una vocación hacia la producción orgánica y economía sustentable. Recientemente, motivada por las nuevas generaciones, surge la idea de abrirlo para mostrar su funcionamiento y la riqueza cultural, gastronómica, educativa y productiva que se genera a través del trabajo y amor a la tierra.
-
-            El deporte y la aventura también son parte del atractivo de vivir la naturaleza en Rancho Escondido.</p>
+        <img src="../../../assets/img/home1.jpg" class="card-img-top img-fluid" alt="...">
+        <div class="card-body mt-5">
+          <p class="descripcion_card">La característica principal de los productos orgánicos es que su proceso de
+            producción está libre de
+            plaguicidas, fertilizantes químicos. Son productos libres de hormonas, antibióticos, colorantes y
+            saborizantes artificiales. Además de ofrecer productos que traen beneficios para la salud al ser humano,
+            colabora con detener significativamente daños al medio ambiente y a la tierra de cultivo. (enAlimentos.lat,
+            2021).</p>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="">
         <div class="card-body">
-          <h5 class="card-title">Teziutlán, Puebla</h5>
-          <p class="card-text">
-            En Teziutlán, Puebla se encuentra un lugar hermoso, entrañable e inolvidable donde el canto de las aves, la niebla, el sol y miles de árboles frutales te trasladan a la maravilla de la tierra que es México.</p>
-          <p class="card-text"><small >Si disfrutas de la naturaleza, de la riqueza cultural y gastronómica, de aprender y de realizar actividades al aire libre, Rancho Escondido te ofrece experiencias inolvidables. Ubicado en la localidad de Loma Bonita, Teziutlán, Puebla.</small></p>
+          <p class="descripcion_card">
+            <b>Teziutlán, Puebla</b> es conocida por ser una región destacada en la producción de manzanas orgánicas de
+            alta
+            calidad. Los agricultores locales se esfuerzan por cultivar variedades únicas que prosperan en este entorno
+            particular, brindando productos orgánicos frescos y deliciosos a la comunidad y más allá.
+          </p>
         </div>
-        <img src="../../../assets/img/login-card-3.jpg" class="card-img-bottom" alt="...">
+        <img src="../../../assets/img/capilla.webp" class="card-img-bottom" alt="...">
       </div>
     </div>
   </div>
 </div>
-<div class="container">
-  <iframe class="video" src="https://www.youtube.com/embed/z_BtaCu7VG0" frameborder="0" allowfullscreen></iframe>
-</div>
 <div class="container mb-4">
-  <h1 class="text-center">Beneficios de las Manzanas Orgánicas</h1>
+  <div class="container text-center mb-1">
+    <p class="texto_title bold">Beneficios</p>
+  </div>
   <div class="container-fluid">
     <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="health-tab" data-bs-toggle="tab" data-bs-target="#health" type="button" role="tab" aria-controls="health" aria-selected="true">Salud</button>
+        <button class="nav-link active" id="health-tab" data-bs-toggle="tab" data-bs-target="#health" type="button"
+          role="tab" aria-controls="health" aria-selected="true">Salud</button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="environment-tab" data-bs-toggle="tab" data-bs-target="#environment" type="button" role="tab" aria-controls="environment" aria-selected="false">Medio Ambiente</button>
+        <button class="nav-link" id="environment-tab" data-bs-toggle="tab" data-bs-target="#environment" type="button"
+          role="tab" aria-controls="environment" aria-selected="false">Medio Ambiente</button>
       </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-
-        <!-- Beneficios para la Salud -->
-        <div class="tab-pane fade show active" id="health" role="tabpanel" aria-labelledby="health-tab">
-          
-          <h2>Propiedades Nutricionales</h2>
-          <p>Las manzanas orgánicas contienen una gran cantidad de nutrientes beneficiosos:</p>
-          <ul>
-            <li>Fibra: Mejora el tránsito intestinal y reduce el colesterol.</li>
-            <li>Vitamina C: Fortalece el sistema inmune y es antioxidante.</li>  
-            <li>Potasio: Reduce la presión arterial y previene calambres.</li>
-            <li>Polifenoles: Previenen enfermedades como cáncer y Alzheimer.</li>
-          </ul>
-      
-          <h2>Beneficios Comprobados</h2>
-          <p>Estudios científicos han demostrado que consumir manzanas orgánicas:</p>
-          <ul>
-            <li>Reduce el riesgo de diabetes tipo 2 hasta en un 23%.</li>
-            <li>Baja los niveles de colesterol LDL hasta en un 40%.</li>
-            <li>Disminuye la inflamación intestinal en personas con síndrome de intestino irritable.</li>  
-          </ul>
-      
-          <h2>Cómo Consumirlas</h2>
-          <p>Se recomienda consumir al menos una manzana orgánica al día. Algunas formas de incluirlas son:</p>
-          <ul>
-            <li>Enteras como colación saludable</li>
-            <li>En jugos y licuados nutritivos</li>
-            <li>Cocinadas en compotas o al horno</li>
-          </ul>
-      
-      
-        <!-- Contenido existente -->
-      
+      <!-- Beneficios para la Salud -->
+      <div class="tab-pane fade show active" id="health" role="tabpanel" aria-labelledby="health-tab">
+        <h2 class="texto_card_big card-text mt-3">Propiedades Nutricionales</h2>
+        <p class="descripcion_card mt-2">Las manzanas orgánicas contienen una gran cantidad de nutrientes beneficiosos:</p>
+        <div class="card-group mb-3">
+          <div class="card">
+            <img src="../../../assets/img/fibra.jpg" class="card-img-top card-img-fixed" alt="...">
+            <div class="card-body">
+              <h5 class="texto_card text-center">Fibra</h5>
+              <p class="descripcion_card">Mejora el tránsito intestinal y reduce el colesterol.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="../../../assets/img/c.webp" class="card-img-top card-img-fixed" alt="...">
+            <div class="card-body">
+              <h5 class="texto_card text-center">Vitamina C</h5>
+              <p class="descripcion_card">Fortalece el sistema inmune y es antioxidante.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="../../../assets/img/potasio.jpeg" class="card-img-top card-img-fixed" alt="...">
+            <div class="card-body">
+              <h5 class="texto_card text-center">Potasio</h5>
+              <p class="descripcion_card">Reduce la presión arterial y previene calambres.</p>
+            </div>
+          </div>
+        </div>
+        <h2 class="texto_card_big mb-3">Propiedades y Beneficios de la Manzana</h2>
+        <ol class="custom-list descripcion_card">
+          <li><span class="list-number">1</span>Previene el estreñimiento. Su alto contenido en fibra favorece el
+            tránsito
+            intestinal y ayuda a la digestión de las grasas.</li>
+          <li><span class="list-number">2</span>Poder antioxidante. Su alto contenido en estos compuestos favorece la
+            regeneración celular.</li>
+          <li><span class="list-number">3</span>Mejora el sistema inmune. Su contenido en vitamina C aumenta las
+            defensas de
+            nuestro organismo.</li>
+          <li><span class="list-number">4</span>Favorece el bienestar. Contiene vitamina B, que aumenta los niveles de
+            energía.</li>
+          <li><span class="list-number">5</span>Perfecto para hacer dieta. La manzana es un snack perfecto, por su poder
+            saciante y sus bajas calorías.</li>
+          <li><span class="list-number">6</span>Es muy nutritiva. Es rica en minerales como el fósforo, potasio o
+            calcio.</li>
+          <li><span class="list-number">7</span>Disminuye la fatiga. Gracias a la presencia de ácido málico y ácido
+            tartárico.
+          </li>
+          <li><span class="list-number">8</span>Buena para los dientes. Protege la dentadura, mejora el estado de las
+            encías y
+            regula el pH de la boca.</li>
+        </ol>
       </div>
+
 
       <!-- Beneficios para el Medio Ambiente -->
       <div class="tab-pane fade" id="environment" role="tabpanel" aria-labelledby="environment-tab">
-        <div class="card mb-3">
-          <img src="https://via.placeholder.com/600x300" class="card-img-top" alt="Manzana Orgánica">
-          <div class="card-body">
-            <h5 class="card-title">Cultivo Sostenible</h5>
-            <p class="card-text">El cultivo de manzanas orgánicas se realiza de manera sostenible, lo que beneficia al medio ambiente en varios aspectos:</p>
-            <ul>
-              <li>Menos uso de pesticidas y químicos.</li>
-              <li>Preservación de la biodiversidad.</li>
-              <li>Reducción de la erosión del suelo.</li>
-            </ul>
-            <a href="#" class="btn btn-primary">Más sobre Sostenibilidad</a>
+        <div class="row texto_c mt-3">
+          <!-- Tarjeta 1 -->
+          <div class="col-md-12">
+            <div class="">
+              <img src="../../../assets/img/cultivos.jpg" class="card-img" alt="Imagen Tarjeta 1">
+              <div class="card-img-overlay">
+                <h5 class="">Cultivo Sostenible</h5>
+                <p class="">El cultivo de manzanas orgánicas se realiza de manera sostenible, lo que beneficia al medio ambiente en varios aspectos:</p>
+                <ul>
+                  <li>Menos uso de pesticidas y químicos.</li>
+                  <li>Preservación de la biodiversidad.</li>
+                  <li>Reducción de la erosión del suelo.</li>
+                </ul>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Comparte tu Experiencia</h5>
-            <p class="card-text">Únete a la comunidad de amantes de las manzanas orgánicas y comparte tus consejos e historias sobre su cultivo y consumo sostenible.</p>
-            <a href="#" class="btn btn-primary">Únete a la Comunidad</a>
+      
+          <!-- Tarjeta 2 -->
+          <div class="col-md-12">
+            <div class="card text-bg-dark">
+              <img src="../../../assets/img/huella.jpg" class="card-img" alt="Imagen Tarjeta 2">
+              <div class="card-img-overlay">
+                <h5 class="card-title">Reducción de la Huella Ambiental</h5>
+                <p class="card-text">Consumir manzanas orgánicas contribuye a la reducción de la huella ambiental al:</p>
+                <ul>
+                  <li>Minimizar el uso de recursos no renovables.</li>
+                  <li>Disminuir las emisiones de gases de efecto invernadero.</li>
+                  <li>Promover prácticas agrícolas ecológicas.</li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <img src="https://via.placeholder.com/600x300" class="card-img-bottom" alt="Manzanas Orgánicas">
+      
+          <!-- Tarjeta 3 -->
+          <div class="col-md-12">
+            <div class="card text-bg-dark">
+              <img src="../../../assets/img/tres.jpg" class="card-img" alt="Imagen Tarjeta 3">
+              <div class="card-img-overlay">
+                <h5 class="card-title">Conservación de Recursos Naturales</h5>
+                <p class="card-text">El consumo de manzanas orgánicas ayuda a conservar los recursos naturales, incluyendo:</p>
+                <ul>
+                  <li>Agua: Reducción de la contaminación hídrica.</li>
+                  <li>Suelo: Evitar la degradación del suelo y la pérdida de la capa fértil.</li>
+                  <li>Ecosistemas: Protección de la diversidad biológica.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="bg_blanco mb-3">
+  <div class="container text-center mt-5">
+    <p class="texto_title bold">Productos</p>
+  </div>
+  <div class="bod">
+    <div class="swiper cartas">
+      <div class="swiper-wrapper">
+        <ng-container *ngFor="let pro of lista; let i = index">
+          <div class="swiper-slide">
+            <div class="">
+              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(pro.foto)" class="card-img-fixed"
+                alt="...">
+              <div class="card-body">
+                <p class="card-text">{{pro.nombre}}</p>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="p-3">
+  <div class="container">
+    <iframe class="video" src="https://www.youtube.com/embed/GJHn7X9dtKY" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 <!-- Message system -->
 <ng-container *ngIf="banderaId">
   <div class="message-container">
     <div class="dropdown">
-      <button class="btn btn-rojo" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+      <button class="btn btn-rojo" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+        aria-controls="offcanvasRight">
         <i class="fa fa-envelope"></i>
       </button>
     </div>
