--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,11 +1,11 @@
 <nav class="fondo_navbar navbar-expand-lg fixed-top">
     <div class="container-fluid p-0 m-2">
       <div class="row">
-        <div class="col">
-          <div class="text-center cursor_pointer">
-            <img routerLink="/home" src="../../../assets/img/Logo Horizontal.svg" alt="" width="15%" height="50%">
+        <div class="col-12">
+            <div class="text-center img_nav mt-3">
+              <img routerLink="/home" src="../../../assets/img/Logo Horizontal.svg" alt="" width="15%" height="50%">
+            </div>
           </div>
-        </div>
       </div>
     </div>
   </nav>
