--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,44 +1,58 @@
 <div class="">
   <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-          <div class="swiper-slide fondo_swiper">
-              <img src="../../../assets/img/Manza-home.jpg" alt="">
-              <div class="overlay_box">
-                  <div class="texto_superpuesto">
-                      <p class="texto_small_swiper">Conoce los beneficios de las</p>
-                      <p class="texto_big_swiper">manzanas</p>
-                      <p class="texto_big_swiper">orgánicas</p>
-                  </div>
-              </div>
+    <div class="swiper-wrapper">
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/beneficios-manzana.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce los beneficios de las</p>
+            <p class="texto_big_swiper">manzanas</p>
+            <p class="texto_big_swiper">orgánicas</p>
           </div>
-          <div class="swiper-slide">
-              <div class="fondo_swiper">
-                  <img src="../../../assets/img/Manza-home.jpg" alt="">
-              </div>
-          </div>
-          <div class="swiper-slide fondo_swiper">
-              <img src="../../../assets/img/Manza-home.jpg" alt="">
-              <div class="overlay_box">
-                  <div class="texto_superpuesto">
-                      <p class="texto_small_swiper">Conoce nuestras</p>
-                      <p class="texto_big_swiper">actividades</p>
-                  </div>
-              </div>
-          </div>
-          <div class="swiper-slide fondo_swiper">
-              <img src="../../../assets/img/Manza-home.jpg" alt="">
-              <div class="overlay_box">
-                  <div class="texto_superpuesto">
-                      <p class="texto_small_swiper">Conoce los beneficios de las</p>
-                      <p class="texto_big_swiper">manzanas</p>
-                      <p class="texto_big_swiper">orgánicas</p>
-                  </div>
-              </div>
-          </div>
+        </div>
       </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/Manza-home.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">El mayor productor de</p>
+            <p class="texto_big_swiper">manzanas</p>
+            <p class="texto_big_swiper">orgánicas</p>
+            <p class="texto_small_swiper">Teziutlán</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/actividades-2.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce las</p>
+            <p class="texto_big_swiper">Actividades</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/actividades-1.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">No esperes mas</p>
+            <p class="texto_big_swiper">Visitanos</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide fondo_swiper">
+        <img src="../../../assets/img/Nosotros.jpg" alt="">
+        <div class="overlay_box">
+          <div class="texto_superpuesto">
+            <p class="texto_small_swiper">Conoce acerca de</p>
+            <p class="texto_big_swiper">Nosotros</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
   </div>
 </div>
 <div class="container text-center mt-3 mb-4">
