--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,12 +29,23 @@ $color_gris_oscuro: #7c7c7c;
 $color_fondo_card: #F6F5F1;
 $color_btn_sombra: rgba(30, 137, 80, 0.4);
 
+.accordion {
+    --bs-accordion-btn-bg: #4e9545 !important;
+    --bs-accordion-active-bg: $color_verde;
+}
+
 .bg {
     background-color: $color_verde;
 }
 
 .bg_verde {
     background-color: $color_verde;
+    padding: 1rem 15rem 1rem 15rem !important;
+    border-radius: 2%;
+}
+
+.bg_blanco {
+    background-color: $color_fondo_card;
     padding: 1rem 15rem 1rem 15rem !important;
     border-radius: 2%;
 }
@@ -75,6 +86,17 @@ $color_btn_sombra: rgba(30, 137, 80, 0.4);
     font-size: clamp(0.5rem, -0.875rem + 8.333333vw, 1.2rem);
 }
 
+.texto_c {
+    font-family: $kamerik-book;
+    color: white;
+    font-size: clamp(0.5rem, -0.875rem + 8.333333vw, 1.2rem);
+}
+
+/* Estilo para pestañas no activas */
+.nav-link:not(.active) {
+    color: $color_verde_card; /* Cambia "tu-color-aqui" al color deseado */
+  }
+  
 .carta_blanca {
     background-color: #e9e5d7;
     display: flex;
@@ -113,6 +135,10 @@ $color_btn_sombra: rgba(30, 137, 80, 0.4);
 
 .card-text_precio {
     color: #1e8950;
+}
+
+.color_blanco {
+    color: white !important;
 }
 
 .fondo_swiper img {
@@ -190,9 +216,11 @@ $color_btn_sombra: rgba(30, 137, 80, 0.4);
 
 .message-container {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
 }
+
 
 table {
     thead {
@@ -488,6 +516,7 @@ table {
 
 input:focus,
 select:focus,
+select,
 input.form-control:focus {
     border-color: $color_verde_card;
     box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px $color_verde_card;
