--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -27,7 +27,8 @@
             <button class="btn btn-rojo" (click)="buscarEvento(list.id, 1, list.nombre)">Actualizar</button>
           </td>
           <td class="text-center vertical_align">
-            <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id, 2, list.nombre)" data-bs-target="#eliminarEvento">Eliminar</button>
+            <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id, 2, list.nombre)"
+              data-bs-target="#eliminarEvento">Eliminar</button>
           </td>
         </tr>
       </tbody>
@@ -60,7 +61,8 @@
             <button class="btn btn-rojo" (click)="buscarPunto(list.id, 1, list.nombre)">Actualizar</button>
           </td>
           <td class="text-center vertical_align">
-            <button class="btn btn-rojo" (click)="buscarPunto(list.id, 2, list.nombre)" data-bs-toggle="modal" data-bs-target="#eliminarPunto">Eliminar</button>
+            <button class="btn btn-rojo" (click)="buscarPunto(list.id, 2, list.nombre)" data-bs-toggle="modal"
+              data-bs-target="#eliminarPunto">Eliminar</button>
           </td>
         </tr>
       </tbody>
