--- a/src/app/pages/liberar/liberar.component.html
+++ b/src/app/pages/liberar/liberar.component.html
@@ -66,8 +66,8 @@
         </div>
         <div class="form-check text-center">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="cambiarBtn()">
-            <label class="form-check-label" for="flexCheckDefault">
-                Confirmar que el pedido es correcto
+            <label class="form-check-label mt-1" for="flexCheckDefault">
+                &nbsp; Confirmar que el pedido es correcto
             </label>
         </div>
         <button type="submit" class="btn btn-rojo mt-3" [disabled]="confirmadoDos">Liberar Pedido</button>
