--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -34,7 +34,7 @@
                                             id="floatingPassword" placeholder="Password">
                                         <label for="floatingPassword">Password</label>
                                     </div>
-                                    <button type="submit" class="btn btn-rojo">Entrar</button>
+                                    <button type="submit" class="btn btn-rojo">Acceder</button>
                                 </form>
                                 <hr>
                                 <div class="text-center">
