--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -35,6 +35,7 @@
                                         <label for="floatingPassword">Password</label>
                                     </div>
                                     <button type="submit" class="btn btn-rojo">Acceder</button>
+                                    <a [routerLink]="['/home']" class="btn btn_gris mt-2">Regresar al Inicio</a>
                                 </form>
                                 <hr>
                                 <div class="text-center">
